labs/bonus-network-policies/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: netpol-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: busybox:1.38.0
          command: ["/bin/sh", "-c", "while true; do wget -O- --timeout=2 http://backend; sleep 5; done"]
