labs/bonus-network-policies/other-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: other
  namespace: netpol-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: other
  template:
    metadata:
      labels:
        app: other
    spec:
      containers:
        - name: other
          image: busybox:1.38.0
          command: ["/bin/sh", "-c", "while true; do wget -O- --timeout=2 http://backend; sleep 5; done"]
